# ts-icl

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.html  README.md  README_quickstart.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  README_quickstart.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/tsicl/: index.doctree
.doctrees/nbsphinx/src/: 01_get_started_forecasting.ipynb
.doctrees/pages/: 01_get_started_forecasting.doctree  02_get_started_imputation.doctree
.doctrees/src/: 00_README.doctree  01_get_started_forecasting.doctree  02_get_started_imputation.doctree  03_development.doctree  0_quickstart.doctree  readme.doctree
.github/workflows/: docs.yml  publish.yml  tests.yml
_sources/: README.md.txt  README_quickstart.md.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/tsicl/: index.rst.txt
_sources/pages/: 01_get_started_forecasting.nblink.txt  02_get_started_imputation.nblink.txt
_sources/src/: 00_README.rst.txt  01_get_started_forecasting.ipynb.txt
autoapi/: index.html
autoapi/tsicl/: index.html
autoapi/tsicl/pipeline/: TSICL.html  index.html
autoapi/tsicl/plot/: index.html
autoapi/tsicl/utils/: index.html
bench/: README.md
bench/TIME/: compute_local_leaderboard.py  run_time.sh  tsicl_forecasting.py  tsicl_imputation.py
bench/TIME/config/: time.yaml
bench/TIME/utils/: __init__.py  data.py  imputation.py  metrics.py  read_results.py  saver.py
bench/fevbench/: run_fevbench.sh  tsicl_main.py  tsicl_missing_values.py
bench/fevbench/config/: fevbench.yaml  tasks.yaml
bench/fevbench/utils/: missing_values.py
bench/fmimpute/: run_fmimpute.sh  tsicl_covar.py  tsicl_univar.py
bench/fmimpute/config/: tasks.yaml  (+2 more)
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/src/: 00_README.rst  01_get_started_forecasting.ipynb  02_get_started_imputation.ipynb  03_development.rst  0_quickstart.rst  copy_and_update_nbs.sh  prepare_ressources.sh  readme.md
notebooks/: get_started_forecasting.ipynb  get_started_imputation.ipynb
pages/: 01_get_started_forecasting.html  02_get_started_imputation.html  02_get_started_imputation.ipynb
src/: 00_README.html  01_get_started_forecasting.html  01_get_started_forecasting.ipynb  02_get_started_imputation.html  02_get_started_imputation.ipynb  03_development.html  0_quickstart.html  readme.html
src/tsicl/: __init__.py  pipeline.py
tests/: test_pipeline.py  tsicl-dummy.ckpt
tests/utils/: test_data_adapter.py  test_task_utils.py
(+106 files in other folders)
