[project]
name = "tsicl"
dynamic = ['version']
description = "TS-ICL: A Flexible Time-Index Foundation Model for Time Series via In-Context Learning"
readme = "README.md"
authors = [
    { name = "Etienne Le Naour" },
    { name = "Tahar Nabil" } ,
    { name = "Adrien Petralia" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["time series", "foundation model", "TS-ICL", "in-context learning"]

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------

dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.0",
    "huggingface-hub>=1.19.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.5.1,<2.10",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------

[project.optional-dependencies]
bench = [
    "datasets<4.0",
    "fev>=0.7.0",
    "gluonts>=0.16.2",
    "scikit-learn>=1.8.0"
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.2",
    "twine>=5.0",
    "ruff>=0.15.17",
]
docs = [
    "ipython>=9.14.1",
    "myst-nb>=1.4.0",
    "myst-parser>=5.1.0",
    "nbconvert>=7.17.1",
    "nbsphinx>=0.9.8",
    "nbsphinx-link>=1.4.1",
    "pydata-sphinx-theme>=0.18.0",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-inline-tabs>=2025.12.21.14",
    "sphinxcontrib-lightbox2>=0.6.0",
    "sphinxcontrib-mermaid>=2.0.2",
]

[project.urls]
Repository    = "https://github.com/EDF-Lab/ts-icl"
Documentation = "https://edf-lab.github.io/ts-icl/"

[build-system]
requires = ["hatchling>=1.26.1"]  # https://github.com/pypa/hatch/issues/1818
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tsicl/__about__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/tsicl",  "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/tsicl"]

[tool.hatch.envs.default]
installer = "uv"
features = []

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
installer = "uv"
features = ["test"]

[tool.coverage.paths]
tsicl = ["src"]

[tool.pyright]
include = ["src"]

reportPossiblyUnboundVariable = false
reportOptionalCall = false
reportOptionalMemberAccess = false
reportIndexIssue = false
reportOperatorIssue = false
